<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LatchHook</string>
    <string name="action_settings">Settings</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>

    <string name="actUnauth_NotAuth">Action not authorized</string>
    <string name="actUnauth_Title">Unauthorized action</string>

    <string name="actAm_Title">Account manager</string>
    <string name="actAm_Unpair">unpair</string>
    <string name="actAm_ChangePwd">change access pass</string>
    <string name="actAm_Setup">setup</string>
    <string name="actAm_ObserverMode">Select observer mode</string>
    <string name="actAm_Hooks">Substrate hooks</string>
    <string name="actAm_Thread">Monitor foreground app</string>
    <string name="actAm_Milis">Time wait before next check (in ms):</string>

    <string name="actLatch_Title">Latch setup</string>
    <string name="actLatch_Pair">pair</string>
    <string name="actLatch_Appid">AppId</string>
    <string name="actLatch_Secret">Secret</string>
    <string name="actLatch_PairCode">Enter your Latch pair code</string>

    <string name="actPwd_OldPwd">Old password</string>
    <string name="actPwd_Pwd">Password</string>
    <string name="actPwd_RptPwd">Repeat password</string>

</resources>
