<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.elevenpaths.latchhook.activities.AccountManagerActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonUnpair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actAm_Unpair"/>

        <Button
            android:id="@+id/buttonChangePwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actAm_ChangePwd"/>

        <Button
            android:id="@+id/buttonSetupHook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actAm_Setup"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listAppItems"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"></ListView>


</LinearLayout>
