<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.elevenpaths.latchhook.activities.PasswordActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/layoutOldPwd"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/actPwd_OldPwd"/>

        <EditText
            android:id="@+id/editOldPwd"
            android:inputType="numberPassword"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        </LinearLayout>


    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/layoutPwd"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/actPwd_Pwd"/>

        <EditText
            android:id="@+id/editPwd"
            android:inputType="numberPassword"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        </LinearLayout>


    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/layoutRepeatPwd"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/actPwd_RptPwd"/>

        <EditText
            android:id="@+id/editRepeatPwd"
            android:inputType="numberPassword"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok"/>


</LinearLayout>
